Bug 32452 - [llvmpipe] piglit gen-compressed-teximage regression
Summary: [llvmpipe] piglit gen-compressed-teximage regression
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 13:09 UTC by Vinson Lee
Modified: 2011-01-03 11:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
gen-compressed-teximage.png (9.99 KB, image/png)
2010-12-16 13:09 UTC, Vinson Lee
Details

Description Vinson Lee 2010-12-16 13:09:12 UTC
Created attachment 41186 [details]
gen-compressed-teximage.png

mesa: 290a1141bc561cbd8fd2bbbb0a7c24d1b6abe0b4 (master)

piglit gen-compressed-teximage now fails but previously passed on llvmpipe.

$ ./bin/gen-compressed-teximage
Probe at (64,64)
  Expected: 1.000000 0.000000 0.000000
  Observed: 0.000000 0.000000 0.501961
Comment 1 Vinson Lee 2010-12-16 13:16:22 UTC
ee16e97ed1d0921c533c77688b278bef393d9922 is the first bad commit
commit ee16e97ed1d0921c533c77688b278bef393d9922
Author: Brian Paul <brianp@vmware.com>
Date:   Thu Dec 16 10:13:02 2010 -0700

    gallivm: work around LLVM 2.6 bug when calling C functions
    
    Create a constant int pointer to the C function, then cast it to the
    function's type.  This avoids using trampoline code which seem to be
    inadvertantly freed by LLVM in some situations (which leads to segfaults).
    The root issue and work-around were found by José.
    
    NOTE: This is a candidate for the 7.10 branch

:040000 040000 147852976c0f4566d5b339150727d61df382f9e0 9c50dc87d6d7f38330c6f31a41c31e6418dbffb9 M	src
bisect run success
Comment 2 Brian Paul 2010-12-16 13:31:20 UTC
Fixed with commit 3ecf47af1252ad10f98d5ce488cc1b91fab64c25.
Comment 3 Vinson Lee 2011-01-03 11:34:48 UTC
mesa: ada9c78c29ef11720d464211c098b740f8aa11a4 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.